--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,10 +21,13 @@ select {
 }
 
 .grid {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
+  padding: 0 10%;
+}
+
+app-pizza-card {
+  display: flex;
   justify-content: center;
-  padding-left: 10%;
-  padding-right: 10%;
 }
