--- a/src/app/components/pizza-card/pizza-card.component.html
+++ b/src/app/components/pizza-card/pizza-card.component.html
@@ -8,7 +8,8 @@
       <img [src]="image" alt="Pizza">
     </div>
     <div class="back">
-      <p>{{ description }}</p>
+      <h1>{{title}}</h1>
+      <p>{{description}}</p>
     </div>
   </div>
 </div>
