--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,28 @@
-<h1>Carte des pizzas de Florent</h1>
-<div class="container">
-  <header>
-    <select [(ngModel)]="selectedMonth">
-      <option *ngFor="let month of months">{{ month }}</option>
-    </select>
-  </header>
+<html><h1 class="text-3xl font-bold underline">Carte des pizzas de Florent</h1>
+  <div class="container">
+    <header>
+      <div class="relative max-w-xs">
+        <select
+          [(ngModel)]="selectedMonth"
+          class="block w-full appearance-none px-4 py-2 pr-10 text-base text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+          <option *ngFor="let month of months">{{ month }}</option>
+        </select>
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-400">
+          <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+          </svg>
+        </div>
+      </div>      
+    </header>
 
-  <main class="grid">
-    <app-pizza-card 
-      *ngFor="let pizza of filteredPizzas"
-      [image]="pizza.image"
-      [description]="pizza.description"
-      [title]="pizza.title">
-    </app-pizza-card>
-  </main>
-</div>
+    <main class="grid">
+      <app-pizza-card 
+        *ngFor="let pizza of filteredPizzas"
+        [image]="pizza.image"
+        [description]="pizza.description"
+        [title]="pizza.title">
+      </app-pizza-card>
+    </main>
+  </div>
+</html>
