--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@ header, h1 {
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 select {
@@ -30,4 +31,9 @@ select {
 app-pizza-card {
   display: flex;
   justify-content: center;
+}
+
+html {
+  width: 100%;
+  overflow-x: hidden;
 }
