--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<html><h1 class="text-3xl font-bold underline">Carte des pizzas de Florent</h1>
+<html>
+  <app-logo></app-logo>
   <div class="container">
     <header>
       <div class="relative max-w-xs">
