--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,13 +1,14 @@
-<div class="relative w-64 h-64 mx-auto">
+<div class="relative w-[50vw] max-w-[300px] aspect-square mx-auto">
+    <!-- Texte circulaire -->
     <div class="absolute inset-0 flex items-center justify-center animate-spin-slow">
         <svg viewBox="0 0 200 200" class="w-full h-full">
         <defs>
             <path
             id="text-circle"
-            d="M 100,100 m -75,0 a 75,75 0 1,1 150,0 a 75,75 0 1,1 -150,0"
+            d="M 100,100 m -72,0 a 72,72 0 1,1 144,0 a 72,72 0 1,1 -144,0"
             />
         </defs>
-        <text fill="black" font-size="14" font-weight="bold">
+        <text fill="black" font-size="13" font-weight="bold">
             <textPath href="#text-circle" startOffset="0%">
             LES PIZZAS DE FLORENT
             </textPath>
@@ -15,11 +16,10 @@
         </svg>
     </div>
 
-    <!-- Image au centre -->
+    <!-- Image ronde responsive -->
     <div class="absolute inset-0 flex items-center justify-center">
-        <div class="w-46 h-46 rounded-full overflow-hidden shadow-lg border-4 border-white">
-            <img src="assets/logo.png" alt="Pizza" class="w-full h-full object-cover" />
+        <div class="w-[60%] aspect-square rounded-full overflow-hidden border-4 border-white shadow-lg">
+        <img src="assets/logo.png" alt="Pizza" class="w-full h-full object-cover" />
         </div>
     </div>
 </div>
-  
