--- a/src/app/components/pizza-card/pizza-card.component.html
+++ b/src/app/components/pizza-card/pizza-card.component.html
@@ -5,7 +5,7 @@
   (click)="toggleFlip()"
 >
   <div
-    class="relative w-full h-full duration-700 [transform-style:preserve-3d]"
+    class="relative w-full h-full duration-700 [transform-style:preserve-3d] shadow-lg"
     [ngClass]="{ '[transform:rotateY(180deg)]': flipped }"
   >
 
@@ -17,7 +17,20 @@
     <!-- Face arrière -->
     <div class="absolute inset-0 bg-blue-100 rounded-lg shadow p-6 [transform:rotateY(180deg)] backface-hidden flex flex-col justify-center items-center text-center">
       <h1 class="text-xl font-bold text-gray-800 mb-2">{{ title }}</h1>
-      <p class="text-gray-700">{{ description }}</p>
+      <div class="grid gap-y-1 text-gray-700">
+        <div class="grid grid-cols-[auto,1fr] items-start">
+          <span class="font-bold underline">Base :</span>
+          <span>{{ base }}</span>
+        </div>
+        <div class="grid grid-cols-[auto,1fr] items-start">
+          <span class="font-bold underline">Avant cuisson :</span>
+          <span>{{ beforeCooking }}</span>
+        </div>
+        <div *ngIf="afterCooking" class="grid grid-cols-[auto,1fr] items-start">
+          <span class="font-bold underline">Après cuisson :</span>
+          <span>{{ afterCooking }}</span>
+        </div>
+      </div>
     </div>
 
   </div>
