--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
     
     
 
-    <main class="grid">
+    <main class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4">
       <app-pizza-card 
         *ngFor="let pizza of filteredPizzas"
         [image]="pizza.image"
