--- a/src/app/components/pizza-card/pizza-card.component.css
+++ b/src/app/components/pizza-card/pizza-card.component.css
@@ -1,61 +1,3 @@
-.card-container {
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
-  margin: 10px;
-}
-
-.card {
-  width: 100%;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  position: relative;
-}
-
-.card-container.flipped .card {
-  transform: rotateY(180deg);
-}
-
-.front, .back {
+.backface-hidden {
   backface-visibility: hidden;
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
-
-.front img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.back {
-  background: #ccc;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transform: rotateY(180deg);
-  padding: 10px;
-  box-sizing: border-box;
-  border-radius: 8px; 
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-img {
-  border-radius: 8px;       /* coins arrondis */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  /* ombre légère */
-  transition: box-shadow 0.3s ease;
-}
-
-img:hover {
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* ombre un peu plus visible au survol */
-}
-
-p {
-  display: flex;
-  justify-content: center;
-}
-  
