--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <html>
   <app-logo class="w-24 md:w-32 lg:w-40"></app-logo>
-  <div class="full-container">
+  <div>
     <header class="w-full flex justify-center py-4">
       <div class="flex gap-4 max-w-2xl w-full px-4">
         <!-- Select Mois -->
