--- a/src/app/components/pizza-card/pizza-card.component.html
+++ b/src/app/components/pizza-card/pizza-card.component.html
@@ -1,5 +1,5 @@
 <div 
-  class="cursor-pointer [perspective:1000px] w-full max-w-3xs sm:max-w-xs aspect-square mx-auto"
+  class="cursor-pointer [perspective:1000px] w-full max-w-xs aspect-square mx-auto"
   (mouseenter)="toggleFlip()" 
   (mouseleave)="resetFlip()"
   (touchstart)="toggleFlip()"
