--- a/src/app/components/pizza-card/pizza-card.component.html
+++ b/src/app/components/pizza-card/pizza-card.component.html
@@ -17,8 +17,8 @@
 
     <!-- Face arrière -->
     <div class="absolute inset-0 bg-blue-100 rounded-lg shadow p-4 sm:p-6 [transform:rotateY(180deg)] backface-hidden flex flex-col justify-center items-center text-center">
-      <h1 class="text-lg sm:text-xl font-bold text-gray-800 mb-2">{{ title }}</h1>
-      <div class="grid gap-y-1 text-gray-700 text-sm sm:text-base">
+      <h1 class="text-sm sm:text-xl font-bold text-gray-800 mb-2">{{ title }}</h1>
+      <div class="grid gap-y-1 text-gray-700 text-xs md:text-base lg:text-lg">
         <div class="grid grid-cols-[auto,1fr] items-start gap-x-1">
           <span class="font-bold underline">Base :</span>
           <span>{{ base }}</span>
