Improve pizza sorting.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<html class="min-h-screen bg-gradient-to-b from-yellow-100 via-white to-pink-100">
+<html class="min-h-screen bg-gradient-to-b from-yellow-100 to-blue-100">
   <body class="font-sans text-gray-800">
 
     <app-logo class="w-24 md:w-32 lg:w-40"></app-logo>
